# toogoodtogo

./: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
stock_keeping/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
stock_keeping/migrations/: 0001_initial.py  0002_stockreading_shop.py  0003_profile.py  0004_rename_expiry_stockreading_expires_at_and_more.py  0005_alter_profile_shop.py
toogoodtogo/: asgi.py  healthcheck.py  settings.py  urls.py  wsgi.py
toogoodtogo/settings/: base.py  development.py  production.py  render.py
