[tool.poetry]
name = "toogoodtogo"
version = "0.1.0"
description = "a stock reading API for food retail"
authors = ["Mathieu Dupuy <deronnax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~4.1.7"
djangorestframework = "^3.14.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"
django-extensions = "^3.2.3"


[tool.poetry.group.production.dependencies]
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
